--- a/views/cadastro.handlebars
+++ b/views/cadastro.handlebars
@@ -1,20 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cadastro de Pacote</title>
-</head>
-<body>
-  <h1>Cadastrar Novo Pacote</h1>
-  <form action="/cadastro" method="POST">
-    <label for="remetente">Remetente:</label><br>
-    <input type="text" id="remetente" name="remetente"><br>
-    <label for="destinatario">Destinatário:</label><br>
-    <input type="text" id="destinatario" name="destinatario"><br>
-    <label for="endereco">Endereço:</label><br>
-    <input type="text" id="endereco" name="endereco"><br><br>
-    <input type="submit" value="Cadastrar">
-  </form>
-</body>
-</html>
+<h1>Cadastrar Novo Pacote</h1>
+<form action="/cadastro" method="POST">
+  <label for="remetente">Remetente:</label><br />
+  <input type="text" id="remetente" name="remetente" /><br />
+  <label for="destinatario">Destinatário:</label><br />
+  <input type="text" id="destinatario" name="destinatario" /><br />
+  <label for="endereco">Endereço:</label><br />
+  <input type="text" id="endereco" name="endereco" /><br /><br />
+  <input type="submit" value="Cadastrar" />
+</form>
