--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,11 +3,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <h1>Sistema de Entregas de Correios</h1>
-    <a href="/cadastro">Cadastrar Novo Pacote</a>
-    <a href="/pacotes">Ver Pacotes</a>
+    <div class="itens-menu">
+      <a href="/cadastro">Cadastrar Novo Pacote</a>
+      <a href="/pacotes">Ver todos os pacotes</a>
+    </div>
     {{{body}}}
   </body>
 </html>
